Fixes #43 Sub-category layout issues

--- a/root/styles/prosilver/theme/kb.css
+++ b/root/styles/prosilver/theme/kb.css
@@ -1,4 +1,10 @@
 /* CSS for the Knowledge Base */
+
+#wrap {
+	min-width: 850px;
+}
+
+
 textarea.desc {
 	width: 40%;
 }
@@ -189,6 +195,10 @@ a.kblink {
 }
 #kb_postbody{
 	padding: 0 1em 0 1em; /* padding here creates white space "inside the box." */
+}
+
+ul.topiclist dt {
+	width: 45%;
 }
 
 .clearfloat { /* this class should be placed on a div or break element and should be the final element before the close of a container that should fully contain a float */
